Fixed navbar glitch where it isnt responsive. Category and subcategory is visible on project show page

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -24,11 +24,10 @@ img.img-responsive.hidden-xs#logo
 
 .navbar
   background-color: #46AAD9
-  height: 60px
+
 
 #navbutton
   color: white
-  font-weight: bold
   padding-top: 20px
 
 #navbutton:hover
@@ -38,8 +37,7 @@ img.img-responsive.hidden-xs#logo
 #navbuttonactive
   color: black
   background-color: #e6f2ff
-  font-weight: bold
-  font-style: italic
+
   height: 60px
   padding-top: 20px
 
